--- a/A1Shish/google.html
+++ b/A1Shish/google.html
@@ -14,20 +14,21 @@
 	<input type="text" placeholder="I am a programmer|">
 
 	<div class="micLogo"><a href="#"><img src="mic.png" alt="mic"></a></div>
+	<div class="searchLogo"><a href="#"><img src="search.png" alt="search"></a></div>
     </div>
 
 <div class="search">
 
-<input type="text" placeholder="i am a programmer">
-<input type="text" placeholder="i am a programmer wallpaper">
-<input type="text" placeholder="i am a programmer tshirt">
-<input type="text" placeholder="i am a programmer i can control life">
-<input type="text" placeholder="i am a programmer who cracked your email">
-<input type="text" placeholder="i am a programmer in this company. the sentence pattern is">
-<input type="text" placeholder="i am a programmer who cracked your account">
-<input type="text" placeholder="i am a programmer facebook">
-<input type="text" placeholder="i am a programmer cover photo">
-<input type="text" placeholder="i am a programmer quiz">
+<input type="text" placeholder="i am a programmer" style="border-bottom:none; border-top:none">
+<input type="text" placeholder="i am a programmer wallpaper" style="border-bottom:none; border-top:none">
+<input type="text" placeholder="i am a programmer tshirt" style="border-bottom:none; border-top:none">
+<input type="text" placeholder="i am a programmer i can control life" style="border-bottom:none; border-top:none">
+<input type="text" placeholder="i am a programmer who cracked your email" style="border-bottom:none; border-top:none">
+<input type="text" placeholder="i am a programmer in this company. the sentence pattern is" style="border-bottom:none; border-top:none">
+<input type="text" placeholder="i am a programmer who cracked your account" style="border-bottom:none; border-top:none">
+<input type="text" placeholder="i am a programmer facebook" style="border-bottom:none; border-top:none">
+<input type="text" placeholder="i am a programmer cover photo" style="border-bottom:none; border-top:none">
+<input type="text" placeholder="i am a programmer quiz" style="border-top:none">
     </div>
 		
 <!-- Footer Code Starts Here   -->
