--- a/A1Shish/google.html
+++ b/A1Shish/google.html
@@ -11,7 +11,7 @@
     <div class="Glogo"><img src="logo.png" alt="Google Logo"></div>
 
     <div class="search">
-	<input type="text" placeholder="I am a programmer|">
+	<input type="text" placeholder="I am a programmer|                                                                                                   ❌  | " style="border-radius: 15px / 50px">
 
 	<div class="micLogo"><a href="#"><img src="mic.png" alt="mic"></a></div>
 	<div class="searchLogo"><a href="#"><img src="search.png" alt="search"></a></div>
@@ -19,7 +19,7 @@
 
 <div class="search">
 
-<input type="text" placeholder="i am a programmer" style="border-bottom:none; border-top:none">
+<input type="text" placeholder="i am a  programmer" style="border-bottom:none; border-top:none">
 <input type="text" placeholder="i am a programmer wallpaper" style="border-bottom:none; border-top:none">
 <input type="text" placeholder="i am a programmer tshirt" style="border-bottom:none; border-top:none">
 <input type="text" placeholder="i am a programmer i can control life" style="border-bottom:none; border-top:none">
@@ -28,7 +28,7 @@
 <input type="text" placeholder="i am a programmer who cracked your account" style="border-bottom:none; border-top:none">
 <input type="text" placeholder="i am a programmer facebook" style="border-bottom:none; border-top:none">
 <input type="text" placeholder="i am a programmer cover photo" style="border-bottom:none; border-top:none">
-<input type="text" placeholder="i am a programmer quiz" style="border-top:none">
+<input type="text" placeholder="i am a programmer quiz" style="border-top:none; border-radius: 15px / 50px">
     </div>
 		
 <!-- Footer Code Starts Here   -->
