--- a/A1Shish/google.html
+++ b/A1Shish/google.html
@@ -19,16 +19,16 @@
 
 <div class="search">
 
-<input type="text" value="i am a  programmer" style="border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer wallpaper" style="border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer tshirt" style="border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer i can control life" style="border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer who cracked your email" style="border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer in this company. the sentence pattern is" style="border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer who cracked your account" style="border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer facebook" style="border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer cover photo" style="border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer quiz" style="border-top:none; border-radius: 15px / 50px">
+<input type="text" value="i am a  programmer" style="font-weight: bold; border-bottom:none; border-top:none">
+<input type="text" value="i am a programmer wallpaper" style="font-weight: bold; border-bottom:none; border-top:none">
+<input type="text" value="i am a programmer tshirt" style="font-weight: bold; border-bottom:none; border-top:none">
+<input type="text" value="i am a programmer i can control life" style="font-weight: bold; border-bottom:none; border-top:none">
+<input type="text" value="i am a programmer who cracked your email" style="font-weight: bold; border-bottom:none; border-top:none">
+<input type="text" value="i am a programmer in this company. the sentence pattern is" style="font-weight: bold; border-bottom:none; border-top:none">
+<input type="text" value="i am a programmer who cracked your account" style="font-weight: bold; border-bottom:none; border-top:none">
+<input type="text" value="i am a programmer facebook" style="font-weight: bold; border-bottom:none; border-top:none">
+<input type="text" value="i am a programmer cover photo" style="font-weight: bold; border-bottom:none; border-top:none">
+<input type="text" value="i am a programmer quiz" style="font-weight: bold; border-top:none; border-radius: 15px / 50px">
     </div>
 		
 <!-- Footer Code Starts Here   -->
