--- a/A1Shish/google.html
+++ b/A1Shish/google.html
@@ -10,14 +10,13 @@
 		
     <div class="Glogo"><img src="logo.png" alt="Google Logo"></div>
 
+
+
     <div class="search">
 	<input type="text" value="I am a programmer                                                                                                   ❌  | " style="border-radius: 15px / 50px">
 
 	<div class="micLogo"><a href="#"><img src="mic.png" alt="mic"></a></div>
 	<div class="searchLogo"><a href="#"><img src="search.png" alt="search"></a></div>
-    </div>
-
-<div class="search">
 
 <input type="text" value="i am a  programmer" style="font-weight: bold; border-bottom:none; border-top:none">
 <input type="text" value="i am a programmer wallpaper" style="font-weight: bold; border-bottom:none; border-top:none">
@@ -28,8 +27,11 @@
 <input type="text" value="i am a programmer who cracked your account" style="font-weight: bold; border-bottom:none; border-top:none">
 <input type="text" value="i am a programmer facebook" style="font-weight: bold; border-bottom:none; border-top:none">
 <input type="text" value="i am a programmer cover photo" style="font-weight: bold; border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer quiz" style="font-weight: bold; border-top:none; border-radius: 15px / 50px">
+<input type="text" value="i am a programmer quiz" style="font-weight: bold; border-top:none; border-bottom:none">
+<input type="text" placeholder="                                     Google Search                I'm Feeling Lucky" style="font-weight: bold; border-top:none; border-bottom:none">
+<input type="text" placeholder="                                                                                       Report inappropriate predictioins" style="font-style: italic; border-top:none; border-radius: 15px / 50px">
     </div>
+
 		
 <!-- Footer Code Starts Here   -->
 
