A1Shish Span Update

--- a/A1Shish/google.html
+++ b/A1Shish/google.html
@@ -9,28 +9,41 @@
  <body>
 		
     <div class="Glogo"><img src="logo.png" alt="Google Logo"></div>
-
-
-
+  
+  <div class="outer-block"> 
     <div class="search">
-	<input type="text" value="I am a programmer                                                                                                   ❌  | " style="border-radius: 15px / 50px">
+	<input type="text" value="I am a programmer" style="border-right:none; border-left:none; border-top:none; font-size:18px">
 
 	<div class="micLogo"><a href="#"><img src="mic.png" alt="mic"></a></div>
 	<div class="searchLogo"><a href="#"><img src="search.png" alt="search"></a></div>
+     </div> <!-- search div ends here -->
 
-<input type="text" value="i am a  programmer" style="font-weight: bold; border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer wallpaper" style="font-weight: bold; border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer tshirt" style="font-weight: bold; border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer i can control life" style="font-weight: bold; border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer who cracked your email" style="font-weight: bold; border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer in this company. the sentence pattern is" style="font-weight: bold; border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer who cracked your account" style="font-weight: bold; border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer facebook" style="font-weight: bold; border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer cover photo" style="font-weight: bold; border-bottom:none; border-top:none">
-<input type="text" value="i am a programmer quiz" style="font-weight: bold; border-top:none; border-bottom:none">
-<input type="text" placeholder="                                     Google Search                I'm Feeling Lucky" style="font-weight: bold; border-top:none; border-bottom:none">
-<input type="text" placeholder="                                                                                       Report inappropriate predictioins" style="font-style: italic; border-top:none; border-radius: 15px / 50px">
-    </div>
+        </br>
+
+	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a  programmer</span>
+
+	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">wallpaper</span></span>
+
+	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">tshirt</span></span>
+
+	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">i can control life</span></span>
+
+	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">who cracked your email</span></span>
+
+	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">in this company. the sentence pattern is</span></span>
+
+	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">who cracked your account</span></span>
+
+	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">facebook</span></span>
+
+	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">cover photo</span></span>
+
+	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">quiz</span></span>
+<!--
+	<input type="text" placeholder="                                     Google Search                I'm Feeling Lucky" style="font-weight: bold; border-top:none; border-bottom:none">
+	<input type="text" placeholder="                                                                                       Report inappropriate predictioins" style="font-style: italic; border-top:none; border-radius: 15px / 50px">
+    </div>  -->
+     </div> <!-- div outer section ends here -->
 
 		
 <!-- Footer Code Starts Here   -->
