--- a/A1Shish/google.html
+++ b/A1Shish/google.html
@@ -13,15 +13,18 @@
   <div class="outer-block"> 
     <div class="search">
 	<input type="text" value="I am a programmer" style="border-right:none; border-left:none; border-top:none; font-size:18px">
-
-	<div class="micLogo"><a href="#"><img src="mic.png" alt="mic"></a></div>
+	
 	<div class="searchLogo"><a href="#"><img src="search.png" alt="search"></a></div>
+	<div class="crossLogo"><a href="#"><img src="cross.png" alt="cross"></a></div>
+	<div class="verticleLine"><a href="#"><img src="vertical-line.png" alt="Separator"></a></div>
+	<div class="micLogo"><a href="#"><img src="mic.png" alt="mic"></a></div>
+	
      </div> <!-- search div ends here -->
 
         </br>
 
 	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a  programmer</span>
-
+	
 	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">wallpaper</span></span>
 
 	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">tshirt</span></span>
@@ -43,6 +46,9 @@
 	<input type="text" placeholder="                                     Google Search                I'm Feeling Lucky" style="font-weight: bold; border-top:none; border-bottom:none">
 	<input type="text" placeholder="                                                                                       Report inappropriate predictioins" style="font-style: italic; border-top:none; border-radius: 15px / 50px">
     </div>  -->
+	<button class="button"> Google Search </button>
+	<button class="button2"> I'm Feeling Lucky </button>
+       <span style="margin-left:75px; margin-right:20px;  float:right; font-style:italic; font-size:10px; color:gray">Report inappropriate predictions</span>
      </div> <!-- div outer section ends here -->
 
 		
