A1Shish Input Outline Update

--- a/A1Shish/google.html
+++ b/A1Shish/google.html
@@ -3,7 +3,11 @@
 <head>
 
 <link rel="stylesheet" href="styles.css">
-
+<style>
+input:focus{
+outline:none;
+}
+</style>
 </head>
 
  <body>
@@ -48,7 +52,7 @@
     </div>  -->
 	<button class="button"> Google Search </button>
 	<button class="button2"> I'm Feeling Lucky </button>
-       <span style="margin-left:75px; margin-right:20px;  float:right; font-style:italic; font-size:10px; color:gray">Report inappropriate predictions</span>
+       <span style="margin-left:75px; margin-right:20px; float:right; font-style:italic; font-size:10px; color:gray">Report inappropriate predictions</span>
      </div> <!-- div outer section ends here -->
 
 		
