A1Shish Input Update

--- a/A1Shish/google.html
+++ b/A1Shish/google.html
@@ -52,7 +52,7 @@ outline:none;
     </div>  -->
 	<button class="button"> Google Search </button>
 	<button class="button2"> I'm Feeling Lucky </button>
-       <span style="margin-left:75px; margin-right:20px; float:right; font-style:italic; font-size:10px; color:gray">Report inappropriate predictions</span>
+       <span style="margin-left:75px; margin-right:20px; float:right; font-style:italic; font-size:10px; color:gray; cursor:pointer">Report inappropriate predictions</span>
      </div> <!-- div outer section ends here -->
 
 		
