A1Shish Code Restructure

--- a/A1Shish/google.html
+++ b/A1Shish/google.html
@@ -1,62 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
 
-<link rel="stylesheet" href="styles.css">
-<style>
-input:focus{
-outline:none;
-}
-</style>
+<head>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
- <body>
-		
-    <div class="Glogo"><img src="logo.png" alt="Google Logo"></div>
+<body>
+  <div class="Glogo"><img src="logo.png" alt="Google Logo"></div>
   
   <div class="outer-block"> 
     <div class="search">
-	<input type="text" value="I am a programmer" style="border-right:none; border-left:none; border-top:none; font-size:18px">
-	
+	<input type="text" value="I am a programmer">
 	<div class="searchLogo"><a href="#"><img src="search.png" alt="search"></a></div>
 	<div class="crossLogo"><a href="#"><img src="cross.png" alt="cross"></a></div>
 	<div class="verticleLine"><a href="#"><img src="vertical-line.png" alt="Separator"></a></div>
 	<div class="micLogo"><a href="#"><img src="mic.png" alt="mic"></a></div>
-	
      </div> <!-- search div ends here -->
 
         </br>
+	<span class="span1">i am a  programmer</span>
+	<span class="span1">i am a programmer <span>wallpaper</span></span>
+	<span class="span1">i am a programmer <span>tshirt</span></span>
+	<span class="span1">i am a programmer <span>i can control life</span></span>
+	<span class="span1">i am a programmer <span>who cracked your email</span></span>
+	<span class="span1">i am a programmer <span>in this company. the sentence pattern is</span></span>
+	<span class="span1">i am a programmer <span>who cracked your account</span></span>
+	<span class="span1">i am a programmer <span>facebook</span></span>
+	<span class="span1">i am a programmer <span>cover photo</span></span>
+	<span class="span1">i am a programmer <span>quiz</span></span>
 
-	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a  programmer</span>
-	
-	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">wallpaper</span></span>
-
-	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">tshirt</span></span>
-
-	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">i can control life</span></span>
-
-	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">who cracked your email</span></span>
-
-	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">in this company. the sentence pattern is</span></span>
-
-	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">who cracked your account</span></span>
-
-	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">facebook</span></span>
-
-	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">cover photo</span></span>
-
-	<span style="margin-left:75px; margin-bottom:4px; display:block">i am a programmer <span style="font-weight:bold">quiz</span></span>
-<!--
-	<input type="text" placeholder="                                     Google Search                I'm Feeling Lucky" style="font-weight: bold; border-top:none; border-bottom:none">
-	<input type="text" placeholder="                                                                                       Report inappropriate predictioins" style="font-style: italic; border-top:none; border-radius: 15px / 50px">
-    </div>  -->
 	<button class="button"> Google Search </button>
 	<button class="button2"> I'm Feeling Lucky </button>
-       <span style="margin-left:75px; margin-right:20px; float:right; font-style:italic; font-size:10px; color:gray; cursor:pointer">Report inappropriate predictions</span>
-     </div> <!-- div outer section ends here -->
+        
+        <span class="span2">Report inappropriate predictions</span>
+     </div> 
+    <!-- div outer section ends here -->
 
 		
-<!-- Footer Code Starts Here   -->
+    <!-- Footer Code Starts Here   -->
 
     <footer>
       <p class="location">India</p>
@@ -76,5 +57,5 @@ outline:none;
       </nav>
     </footer>
 
- </body>
+</body>
 </html>
